updated everything 8 errors left

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,5 +3,6 @@
 <ul>
 <% @category.items.each do |item| %>
     <li><%= link_to item.title, item_path(item) %></li>
+    <li>$<%= (item.price).to_f%>0</li>
 <% end %>
 </ul>
