--- a/app/views/layouts/_logged_in_header.html.erb
+++ b/app/views/layouts/_logged_in_header.html.erb
@@ -1,8 +1,10 @@
 <nav class="">
     <ul>
         <li> <%= link_to "Store Home", store_path %> </li>
-        <% if !!@cart %>
-          <li> <%= link_to "Cart", cart_path(current_cart) %></li>
+        <li>Signed in as <%= current_user.email%></li>
+        <% if !!current_user.current_cart %>
+          <li> <%= link_to "Cart", cart_path(current_user.current_cart) %></li>
         <% end %>
+        <li><%=link_to "Sign out", destroy_user_session_path %></li>
     </ul>
 </nav>
