--- a/app/views/layouts/_not_logged_in_header.html.erb
+++ b/app/views/layouts/_not_logged_in_header.html.erb
@@ -1,8 +1,9 @@
 <nav class="">
     <ul>
+      <li> <%= link_to "Store Home", store_path %> </li>
+      <li><%= link_to "Sign up", new_user_registration_path %></li>
+      <li>  <%= link_to "sign in", new_user_session_path %></li>
 
-      <%= link_to "Sign Up", new_user_registration_path %>
-      <%= link_to "Log In", new_user_session_path %>
-  
+
     </ul>
 </nav>
