--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,9 +1,11 @@
-<% if session[:user_id] %>
+<% if user_signed_in? %>
+Category List:
 <% @categories.each do |category| %>
   <%= link_to category.title, category_path(category) %>
 <% end %>
 
+Item List:
 <% @items.each do |item| %>
-  <p><%= item.title %> | <%= number_to_currency(item.price) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) %></p>
+  <p><%= item.title %> | <%= number_to_currency(item.price) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item.id) %></p>
 <% end %>
 <% end %>
