--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,9 +5,12 @@
 <% end %>
 
 <% @cart.line_items.each do |line_item| %>
-  <p><%= link_to line_item.item.title, item_path(line_item.item) %> | <%= number_to_currency(line_item.item.price) %> | Quantity: <%= line_item.quantity %> | <% if line_item.item.inventory < 5 %>
+  <p><%= link_to line_item.item.title, item_path(line_item.item) %> | <%= number_to_currency(line_item.item.price.to_f/100) %> | Quantity: <%= line_item.quantity %> | <% if line_item.item.inventory < 5 %>
     <strong>There are only <%= line_item.item.inventory %> left in stock.</strong>
   <% end %> </p>
 <% end %>
 
-<p>Order total: <strong>$<%= (current_user.current_cart.total).to_f %>0</strong> </p>
+<p>Order total: <strong><%= number_to_currency(current_user.current_cart.total) %></strong> </p>
+<% if current_user.current_cart.status != "submitted" %>
+<%= button_to "Checkout", action: "checkout", method: "post"%>
+<% end%>
