--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,6 +3,7 @@
 <ul>
 <% @category.items.each do |item| %>
     <li><%= link_to item.title, item_path(item) %></li>
-    <li>$<%= (item.price).to_f%>0</li>
+    <li><%= number_to_currency(item.price.to_f/100)%></li>
+    <li><%= button_to "Add to Cart", line_items_path(item_id: item.id)%></li>
 <% end %>
 </ul>
