--- a/app/views/layouts/_logged_in_header.html.erb
+++ b/app/views/layouts/_logged_in_header.html.erb
@@ -5,6 +5,6 @@
         <% if !!current_user.current_cart %>
           <li> <%= link_to "Cart", cart_path(current_user.current_cart) %></li>
         <% end %>
-        <li><%=link_to "Sign out", destroy_user_session_path %></li>
+        <li><%=link_to "Sign out", destroy_user_session_path, method: :delete%></li>
     </ul>
 </nav>
